Fix spacing in Section1

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 .top-section {
     background-color: #1F2937;
     display: flex;
-    padding: 80px 160px;
-    gap: 36px;
+    padding: 24px 160px 80px 160px;
+    gap: 48px;
 }
 
 .top-section-left, .top-section-right {
@@ -28,6 +28,7 @@ body {
     flex-direction: column;
     justify-content: center;
     justify-content: space-between;
+    gap: 48px;
     padding-bottom: 48px;
 }
 
@@ -64,7 +65,6 @@ a {
     color: #e5e7eb;
     text-decoration: none;
 }
-
 
 /*** Section 2 ***/
 
